Update Solution notebooks

--- a/Solutions/Lab1_Marketing_content_generation_W_Solution.ipynb
+++ b/Solutions/Lab1_Marketing_content_generation_W_Solution.ipynb
@@ -63,163 +63,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting google-cloud-aiplatform\n",
-            "  Using cached google_cloud_aiplatform-1.132.0-py2.py3-none-any.whl.metadata (46 kB)\n",
-            "Collecting google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0,>=1.34.1 (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0,>=1.34.1->google-cloud-aiplatform)\n",
-            "  Using cached google_api_core-2.28.1-py3-none-any.whl.metadata (3.3 kB)\n",
-            "Collecting google-auth<3.0.0,>=2.45.0 (from google-cloud-aiplatform)\n",
-            "  Using cached google_auth-2.45.0-py2.py3-none-any.whl.metadata (6.8 kB)\n",
-            "Collecting proto-plus<2.0.0,>=1.22.3 (from google-cloud-aiplatform)\n",
-            "  Using cached proto_plus-1.27.0-py3-none-any.whl.metadata (2.2 kB)\n",
-            "Collecting protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<7.0.0,>=3.20.2 (from google-cloud-aiplatform)\n",
-            "  Using cached protobuf-6.33.2-cp310-abi3-win_amd64.whl.metadata (593 bytes)\n",
-            "Requirement already satisfied: packaging>=14.3 in c:\\users\\asggm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from google-cloud-aiplatform) (25.0)\n",
-            "Collecting google-cloud-storage<4.0.0,>=1.32.0 (from google-cloud-aiplatform)\n",
-            "  Using cached google_cloud_storage-3.7.0-py3-none-any.whl.metadata (14 kB)\n",
-            "Collecting google-cloud-bigquery!=3.20.0,<4.0.0,>=1.15.0 (from google-cloud-aiplatform)\n",
-            "  Using cached google_cloud_bigquery-3.39.0-py3-none-any.whl.metadata (8.2 kB)\n",
-            "Collecting google-cloud-resource-manager<3.0.0,>=1.3.3 (from google-cloud-aiplatform)\n",
-            "  Using cached google_cloud_resource_manager-1.15.0-py3-none-any.whl.metadata (9.9 kB)\n",
-            "Collecting shapely<3.0.0 (from google-cloud-aiplatform)\n",
-            "  Using cached shapely-2.1.2-cp311-cp311-win_amd64.whl.metadata (7.1 kB)\n",
-            "Collecting google-genai<2.0.0,>=1.37.0 (from google-cloud-aiplatform)\n",
-            "  Using cached google_genai-1.56.0-py3-none-any.whl.metadata (53 kB)\n",
-            "Collecting pydantic<3 (from google-cloud-aiplatform)\n",
-            "  Using cached pydantic-2.12.5-py3-none-any.whl.metadata (90 kB)\n",
-            "Requirement already satisfied: typing_extensions in c:\\users\\asggm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from google-cloud-aiplatform) (4.15.0)\n",
-            "Collecting docstring_parser<1 (from google-cloud-aiplatform)\n",
-            "  Using cached docstring_parser-0.17.0-py3-none-any.whl.metadata (3.5 kB)\n",
-            "Collecting googleapis-common-protos<2.0.0,>=1.56.2 (from google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0,>=1.34.1->google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0,>=1.34.1->google-cloud-aiplatform)\n",
-            "  Using cached googleapis_common_protos-1.72.0-py3-none-any.whl.metadata (9.4 kB)\n",
-            "Collecting requests<3.0.0,>=2.18.0 (from google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0,>=1.34.1->google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0,>=1.34.1->google-cloud-aiplatform)\n",
-            "  Using cached requests-2.32.5-py3-none-any.whl.metadata (4.9 kB)\n",
-            "Collecting grpcio<2.0.0,>=1.33.2 (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0,>=1.34.1->google-cloud-aiplatform)\n",
-            "  Using cached grpcio-1.76.0-cp311-cp311-win_amd64.whl.metadata (3.8 kB)\n",
-            "Collecting grpcio-status<2.0.0,>=1.33.2 (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0,>=1.34.1->google-cloud-aiplatform)\n",
-            "  Using cached grpcio_status-1.76.0-py3-none-any.whl.metadata (1.1 kB)\n",
-            "Collecting cachetools<7.0,>=2.0.0 (from google-auth<3.0.0,>=2.45.0->google-cloud-aiplatform)\n",
-            "  Using cached cachetools-6.2.4-py3-none-any.whl.metadata (5.6 kB)\n",
-            "Collecting pyasn1-modules>=0.2.1 (from google-auth<3.0.0,>=2.45.0->google-cloud-aiplatform)\n",
-            "  Using cached pyasn1_modules-0.4.2-py3-none-any.whl.metadata (3.5 kB)\n",
-            "Collecting rsa<5,>=3.1.4 (from google-auth<3.0.0,>=2.45.0->google-cloud-aiplatform)\n",
-            "  Using cached rsa-4.9.1-py3-none-any.whl.metadata (5.6 kB)\n",
-            "Collecting google-cloud-core<3.0.0,>=2.4.1 (from google-cloud-bigquery!=3.20.0,<4.0.0,>=1.15.0->google-cloud-aiplatform)\n",
-            "  Using cached google_cloud_core-2.5.0-py3-none-any.whl.metadata (3.1 kB)\n",
-            "Collecting google-resumable-media<3.0.0,>=2.0.0 (from google-cloud-bigquery!=3.20.0,<4.0.0,>=1.15.0->google-cloud-aiplatform)\n",
-            "  Using cached google_resumable_media-2.8.0-py3-none-any.whl.metadata (2.6 kB)\n",
-            "Requirement already satisfied: python-dateutil<3.0.0,>=2.8.2 in c:\\users\\asggm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from google-cloud-bigquery!=3.20.0,<4.0.0,>=1.15.0->google-cloud-aiplatform) (2.9.0.post0)\n",
-            "Collecting grpc-google-iam-v1<1.0.0,>=0.14.0 (from google-cloud-resource-manager<3.0.0,>=1.3.3->google-cloud-aiplatform)\n",
-            "  Using cached grpc_google_iam_v1-0.14.3-py3-none-any.whl.metadata (9.2 kB)\n",
-            "Collecting google-crc32c<2.0.0,>=1.1.3 (from google-cloud-storage<4.0.0,>=1.32.0->google-cloud-aiplatform)\n",
-            "  Using cached google_crc32c-1.8.0-cp311-cp311-win_amd64.whl.metadata (1.8 kB)\n",
-            "Collecting anyio<5.0.0,>=4.8.0 (from google-genai<2.0.0,>=1.37.0->google-cloud-aiplatform)\n",
-            "  Using cached anyio-4.12.0-py3-none-any.whl.metadata (4.3 kB)\n",
-            "Collecting httpx<1.0.0,>=0.28.1 (from google-genai<2.0.0,>=1.37.0->google-cloud-aiplatform)\n",
-            "  Using cached httpx-0.28.1-py3-none-any.whl.metadata (7.1 kB)\n",
-            "Collecting tenacity<9.2.0,>=8.2.3 (from google-genai<2.0.0,>=1.37.0->google-cloud-aiplatform)\n",
-            "  Using cached tenacity-9.1.2-py3-none-any.whl.metadata (1.2 kB)\n",
-            "Collecting websockets<15.1.0,>=13.0.0 (from google-genai<2.0.0,>=1.37.0->google-cloud-aiplatform)\n",
-            "  Using cached websockets-15.0.1-cp311-cp311-win_amd64.whl.metadata (7.0 kB)\n",
-            "Collecting distro<2,>=1.7.0 (from google-genai<2.0.0,>=1.37.0->google-cloud-aiplatform)\n",
-            "  Using cached distro-1.9.0-py3-none-any.whl.metadata (6.8 kB)\n",
-            "Collecting sniffio (from google-genai<2.0.0,>=1.37.0->google-cloud-aiplatform)\n",
-            "  Using cached sniffio-1.3.1-py3-none-any.whl.metadata (3.9 kB)\n",
-            "Collecting annotated-types>=0.6.0 (from pydantic<3->google-cloud-aiplatform)\n",
-            "  Using cached annotated_types-0.7.0-py3-none-any.whl.metadata (15 kB)\n",
-            "Collecting pydantic-core==2.41.5 (from pydantic<3->google-cloud-aiplatform)\n",
-            "  Using cached pydantic_core-2.41.5-cp311-cp311-win_amd64.whl.metadata (7.4 kB)\n",
-            "Collecting typing-inspection>=0.4.2 (from pydantic<3->google-cloud-aiplatform)\n",
-            "  Using cached typing_inspection-0.4.2-py3-none-any.whl.metadata (2.6 kB)\n",
-            "Collecting numpy>=1.21 (from shapely<3.0.0->google-cloud-aiplatform)\n",
-            "  Using cached numpy-2.4.0-cp311-cp311-win_amd64.whl.metadata (6.6 kB)\n",
-            "Collecting idna>=2.8 (from anyio<5.0.0,>=4.8.0->google-genai<2.0.0,>=1.37.0->google-cloud-aiplatform)\n",
-            "  Using cached idna-3.11-py3-none-any.whl.metadata (8.4 kB)\n",
-            "Collecting certifi (from httpx<1.0.0,>=0.28.1->google-genai<2.0.0,>=1.37.0->google-cloud-aiplatform)\n",
-            "  Using cached certifi-2025.11.12-py3-none-any.whl.metadata (2.5 kB)\n",
-            "Collecting httpcore==1.* (from httpx<1.0.0,>=0.28.1->google-genai<2.0.0,>=1.37.0->google-cloud-aiplatform)\n",
-            "  Using cached httpcore-1.0.9-py3-none-any.whl.metadata (21 kB)\n",
-            "Collecting h11>=0.16 (from httpcore==1.*->httpx<1.0.0,>=0.28.1->google-genai<2.0.0,>=1.37.0->google-cloud-aiplatform)\n",
-            "  Using cached h11-0.16.0-py3-none-any.whl.metadata (8.3 kB)\n",
-            "Collecting pyasn1<0.7.0,>=0.6.1 (from pyasn1-modules>=0.2.1->google-auth<3.0.0,>=2.45.0->google-cloud-aiplatform)\n",
-            "  Using cached pyasn1-0.6.1-py3-none-any.whl.metadata (8.4 kB)\n",
-            "Requirement already satisfied: six>=1.5 in c:\\users\\asggm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from python-dateutil<3.0.0,>=2.8.2->google-cloud-bigquery!=3.20.0,<4.0.0,>=1.15.0->google-cloud-aiplatform) (1.17.0)\n",
-            "Collecting charset_normalizer<4,>=2 (from requests<3.0.0,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0,>=1.34.1->google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0,>=1.34.1->google-cloud-aiplatform)\n",
-            "  Using cached charset_normalizer-3.4.4-cp311-cp311-win_amd64.whl.metadata (38 kB)\n",
-            "Collecting urllib3<3,>=1.21.1 (from requests<3.0.0,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0,>=1.34.1->google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0,>=1.34.1->google-cloud-aiplatform)\n",
-            "  Using cached urllib3-2.6.2-py3-none-any.whl.metadata (6.6 kB)\n",
-            "Using cached google_cloud_aiplatform-1.132.0-py2.py3-none-any.whl (8.2 MB)\n",
-            "Using cached docstring_parser-0.17.0-py3-none-any.whl (36 kB)\n",
-            "Using cached google_api_core-2.28.1-py3-none-any.whl (173 kB)\n",
-            "Using cached google_auth-2.45.0-py2.py3-none-any.whl (233 kB)\n",
-            "Using cached google_cloud_bigquery-3.39.0-py3-none-any.whl (259 kB)\n",
-            "Using cached google_cloud_resource_manager-1.15.0-py3-none-any.whl (397 kB)\n",
-            "Using cached google_cloud_storage-3.7.0-py3-none-any.whl (303 kB)\n",
-            "Using cached google_genai-1.56.0-py3-none-any.whl (426 kB)\n",
-            "Using cached proto_plus-1.27.0-py3-none-any.whl (50 kB)\n",
-            "Downloading protobuf-6.33.2-cp310-abi3-win_amd64.whl (436 kB)\n",
-            "   ---------------------------------------- 0.0/436.9 kB ? eta -:--:--\n",
-            "   - ------------------------------------- 20.5/436.9 kB 330.3 kB/s eta 0:00:02\n",
-            "   ----- --------------------------------- 61.4/436.9 kB 656.4 kB/s eta 0:00:01\n",
-            "   ----------------------------- ---------- 317.4/436.9 kB 2.5 MB/s eta 0:00:01\n",
-            "   ---------------------------------------- 436.9/436.9 kB 3.0 MB/s eta 0:00:00\n",
-            "Using cached pydantic-2.12.5-py3-none-any.whl (463 kB)\n",
-            "Using cached pydantic_core-2.41.5-cp311-cp311-win_amd64.whl (2.0 MB)\n",
-            "Using cached shapely-2.1.2-cp311-cp311-win_amd64.whl (1.7 MB)\n",
-            "Using cached annotated_types-0.7.0-py3-none-any.whl (13 kB)\n",
-            "Using cached anyio-4.12.0-py3-none-any.whl (113 kB)\n",
-            "Using cached cachetools-6.2.4-py3-none-any.whl (11 kB)\n",
-            "Using cached distro-1.9.0-py3-none-any.whl (20 kB)\n",
-            "Using cached google_cloud_core-2.5.0-py3-none-any.whl (29 kB)\n",
-            "Using cached google_crc32c-1.8.0-cp311-cp311-win_amd64.whl (34 kB)\n",
-            "Using cached google_resumable_media-2.8.0-py3-none-any.whl (81 kB)\n",
-            "Using cached googleapis_common_protos-1.72.0-py3-none-any.whl (297 kB)\n",
-            "Using cached grpc_google_iam_v1-0.14.3-py3-none-any.whl (32 kB)\n",
-            "Using cached grpcio-1.76.0-cp311-cp311-win_amd64.whl (4.7 MB)\n",
-            "Downloading grpcio_status-1.76.0-py3-none-any.whl (14 kB)\n",
-            "Using cached httpx-0.28.1-py3-none-any.whl (73 kB)\n",
-            "Using cached httpcore-1.0.9-py3-none-any.whl (78 kB)\n",
-            "Using cached numpy-2.4.0-cp311-cp311-win_amd64.whl (12.6 MB)\n",
-            "Using cached pyasn1_modules-0.4.2-py3-none-any.whl (181 kB)\n",
-            "Using cached requests-2.32.5-py3-none-any.whl (64 kB)\n",
-            "Using cached rsa-4.9.1-py3-none-any.whl (34 kB)\n",
-            "Using cached tenacity-9.1.2-py3-none-any.whl (28 kB)\n",
-            "Using cached typing_inspection-0.4.2-py3-none-any.whl (14 kB)\n",
-            "Using cached websockets-15.0.1-cp311-cp311-win_amd64.whl (176 kB)\n",
-            "Using cached sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
-            "Using cached certifi-2025.11.12-py3-none-any.whl (159 kB)\n",
-            "Using cached charset_normalizer-3.4.4-cp311-cp311-win_amd64.whl (106 kB)\n",
-            "Using cached idna-3.11-py3-none-any.whl (71 kB)\n",
-            "Using cached pyasn1-0.6.1-py3-none-any.whl (83 kB)\n",
-            "Using cached urllib3-2.6.2-py3-none-any.whl (131 kB)\n",
-            "Using cached h11-0.16.0-py3-none-any.whl (37 kB)\n",
-            "Installing collected packages: websockets, urllib3, typing-inspection, tenacity, sniffio, pydantic-core, pyasn1, protobuf, numpy, idna, h11, grpcio, google-crc32c, docstring_parser, distro, charset_normalizer, certifi, cachetools, annotated-types, shapely, rsa, requests, pydantic, pyasn1-modules, proto-plus, httpcore, googleapis-common-protos, google-resumable-media, anyio, httpx, grpcio-status, google-auth, grpc-google-iam-v1, google-api-core, google-genai, google-cloud-core, google-cloud-storage, google-cloud-resource-manager, google-cloud-bigquery, google-cloud-aiplatform\n",
-            "Successfully installed annotated-types-0.7.0 anyio-4.12.0 cachetools-6.2.4 certifi-2025.11.12 charset_normalizer-3.4.4 distro-1.9.0 docstring_parser-0.17.0 google-api-core-2.28.1 google-auth-2.45.0 google-cloud-aiplatform-1.132.0 google-cloud-bigquery-3.39.0 google-cloud-core-2.5.0 google-cloud-resource-manager-1.15.0 google-cloud-storage-3.7.0 google-crc32c-1.8.0 google-genai-1.56.0 google-resumable-media-2.8.0 googleapis-common-protos-1.72.0 grpc-google-iam-v1-0.14.3 grpcio-1.76.0 grpcio-status-1.76.0 h11-0.16.0 httpcore-1.0.9 httpx-0.28.1 idna-3.11 numpy-2.4.0 proto-plus-1.27.0 protobuf-6.33.2 pyasn1-0.6.1 pyasn1-modules-0.4.2 pydantic-2.12.5 pydantic-core-2.41.5 requests-2.32.5 rsa-4.9.1 shapely-2.1.2 sniffio-1.3.1 tenacity-9.1.2 typing-inspection-0.4.2 urllib3-2.6.2 websockets-15.0.1\n",
-            "Note: you may need to restart the kernel to use updated packages.\n",
-            "✅ Installation complete!\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "[notice] A new release of pip is available: 24.0 -> 25.3\n",
-            "[notice] To update, run: C:\\Users\\asggm\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Install required packages (run this cell first, only needed once, this may take a while so don't worry if you dont see output immediately)\n",
         "%pip install google-cloud-aiplatform\n",
         "\n",
-        "print(\"✅ Installation complete!\")\n"
+        "print(\" Installation complete!\")\n"
       ]
     },
     {
@@ -276,7 +127,7 @@
         "- `gemini-2.5-flash`: Newer version, balanced speed and capability\n",
         "- `gemini-2.5-pro`: Most capable, but slower and more expensive\n",
         "\n",
-        "💡 **Tip**: Start with `flash` models for development and testing - they're faster and cheaper!\n"
+        " **Tip**: Start with `flash` models for development and testing - they're faster and cheaper!\n"
       ]
     },
     {
