--- a/Solutions/Lab2_Qdrant_Vector_Database_W_Solution.ipynb
+++ b/Solutions/Lab2_Qdrant_Vector_Database_W_Solution.ipynb
@@ -503,7 +503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -522,9 +522,9 @@
         "# Uncomment the lines below if needed:\n",
         "# try:\n",
         "#     qdrant_client.delete_collection(collection_name=collection_name)\n",
-        "#     print(f\"🗑️ Deleted existing collection: {collection_name}\")\n",
+        "#     print(f\" Deleted existing collection: {collection_name}\")\n",
         "# except Exception as e:\n",
-        "#     print(f\"ℹ️ No existing collection to delete\")\n",
+        "#     print(f\"ℹ No existing collection to delete\")\n",
         "\n",
         "# Create the collection\n",
         "qdrant_client.create_collection(\n",
